[gd_scene load_steps=17 format=2]

[ext_resource path="res://Highscores.gd" type="Script" id=1]
[ext_resource path="res://Fonts/jomhuria.font" type="FontFile" id=2]
[ext_resource path="res://GUI/back.png" type="Texture2D" id=3]
[ext_resource path="res://GUI/chevron-right.png" type="Texture2D" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.878431, 0.878431, 0.878431, 1 )
border_width_bottom = 8
border_color = Color( 0.392157, 0.866667, 0.0901961, 1 )
expand_margin_left = 16.0
expand_margin_right = 16.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )
border_width_bottom = 8
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.458824, 0.458824, 0.458824, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.741176, 0.741176, 0.741176, 1 )

[sub_resource type="StyleBoxEmpty" id=12]

[node name="Highscores" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )

[node name="Form" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0

[node name="Submit" type="Button" parent="Form"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -250.0
offset_top = -149.0
offset_right = 250.0
offset_bottom = -49.0
size_flags_horizontal = 2
size_flags_vertical = 2
theme_override_fonts/font = ExtResource( 2 )
text = "Send Score"

[node name="Name_Label" type="Label" parent="Form"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -374.0
offset_right = 55.0
offset_bottom = -207.0
scale = Vector2( 0.6, 0.6 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your name:"
valign = 1

[node name="Name" type="LineEdit" parent="Form"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -374.0
offset_right = 250.0
offset_bottom = -274.0
theme_override_styles/focus = SubResource( 1 )
theme_override_styles/normal = SubResource( 2 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/selection_color = Color( 0, 0, 0, 1 )
theme_override_colors/cursor_color = Color( 0, 0, 0, 1 )
theme_override_colors/font_color_selected = Color( 1, 1, 1, 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Record_Label" type="Label" parent="Form"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -279.0
offset_top = -274.0
offset_right = 54.0
offset_bottom = -107.0
scale = Vector2( 0.6, 0.6 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your score:"
valign = 1

[node name="Record" type="Label" parent="Form"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -273.8
offset_right = 300.0
offset_bottom = -173.8
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "12345m"
valign = 1

[node name="Result_already_submitted" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -300.0
offset_top = -250.0
offset_right = 557.0
offset_bottom = -107.0
scale = Vector2( 0.7, 0.7 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
text = "Your score has been sent. make a new high score!"
align = 1
valign = 1
autowrap = true

[node name="ScoreList_index" type="ItemList" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_top = 100.0
offset_right = 50.0
offset_bottom = 900.0
scale = Vector2( 0.5, 0.5 )
tooltip_text = "Rank"
theme_override_styles/cursor = SubResource( 3 )
theme_override_styles/selected_focus = SubResource( 4 )
theme_override_styles/focus = SubResource( 5 )
theme_override_styles/cursor_unfocused = SubResource( 6 )
theme_override_styles/selected = SubResource( 7 )
theme_override_styles/bg = SubResource( 8 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/guide_color = Color( 0.741176, 0.741176, 0.741176, 1 )
theme_override_colors/font_color_selected = Color( 0, 0, 0, 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/v_separation = 20
theme_override_constants/h_separation = 20

[node name="ScoreList_name" type="ItemList" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 900.0
scale = Vector2( 0.5, 0.5 )
tooltip_text = "Name"
theme_override_styles/cursor = SubResource( 3 )
theme_override_styles/selected_focus = SubResource( 4 )
theme_override_styles/focus = SubResource( 5 )
theme_override_styles/cursor_unfocused = SubResource( 6 )
theme_override_styles/selected = SubResource( 7 )
theme_override_styles/bg = SubResource( 8 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/guide_color = Color( 0.741176, 0.741176, 0.741176, 1 )
theme_override_colors/font_color_selected = Color( 0, 0, 0, 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/v_separation = 20
theme_override_constants/h_separation = 20

[node name="ScoreList_value" type="ItemList" parent="."]
anchor_left = 0.5
anchor_right = 0.5
offset_left = 150.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 900.0
scale = Vector2( 0.5, 0.5 )
tooltip_text = "Score"
theme_override_styles/cursor = SubResource( 3 )
theme_override_styles/selected_focus = SubResource( 4 )
theme_override_styles/focus = SubResource( 5 )
theme_override_styles/cursor_unfocused = SubResource( 6 )
theme_override_styles/selected = SubResource( 7 )
theme_override_styles/bg = SubResource( 8 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/guide_color = Color( 0.741176, 0.741176, 0.741176, 1 )
theme_override_colors/font_color_selected = Color( 0, 0, 0, 1 )
theme_override_colors/font_color = Color( 0, 0, 0, 1 )
theme_override_constants/v_separation = 20
theme_override_constants/h_separation = 20

[node name="HTTPRequest_Submit" type="HTTPRequest" parent="."]

[node name="HTTPRequest_Fetch" type="HTTPRequest" parent="."]

[node name="BG_top" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 1 )
polygon = PackedVector2Array( 0, 0, 0, 70, 600, 70, 600, 0 )

[node name="Title" type="Label" parent="BG_top"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 100.0
offset_right = 767.0
offset_bottom = 117.0
scale = Vector2( 0.6, 0.6 )
theme_override_fonts/font = ExtResource( 2 )
theme_override_colors/font_color = Color( 1, 1, 1, 1 )
text = "High Scores"
align = 1
valign = 1

[node name="Back" type="Button" parent="BG_top"]
offset_left = 530.0
offset_right = 670.0
offset_bottom = 140.0
scale = Vector2( 0.5, 0.5 )
theme_override_styles/hover = SubResource( 9 )
theme_override_styles/pressed = SubResource( 10 )
theme_override_styles/focus = SubResource( 11 )
theme_override_styles/normal = SubResource( 12 )
icon = ExtResource( 3 )

[node name="Next" type="Button" parent="."]
offset_left = 350.0
offset_top = 501.0
offset_right = 450.0
offset_bottom = 555.0
icon = ExtResource( 4 )
flat = true

[node name="Previous" type="Button" parent="."]
visible = false
offset_left = 250.0
offset_top = 555.0
offset_right = 350.0
offset_bottom = 609.0
rotation = 180.0
icon = ExtResource( 4 )
flat = true

[connection signal="pressed" from="Form/Submit" to="." method="_on_Submit_pressed"]
[connection signal="request_completed" from="HTTPRequest_Submit" to="." method="_on_HTTPRequest_Submit_request_completed"]
[connection signal="request_completed" from="HTTPRequest_Fetch" to="." method="_on_HTTPRequest_Fetch_request_completed"]
[connection signal="pressed" from="BG_top/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_Previous_pressed"]
